--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.2"
   },
+  "scripts": {
+    "post-autoload-dump": [
+      "@php service:discover"
+    ]
+  },
   "autoload": {
     "psr-4": {
       "mima\\": "src"
