--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=7.0",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^7.2|^6.5.*"
+    "guzzlehttp/guzzle": "^7.2|^6.5"
   },
   "scripts": {
     "post-autoload-dump": [
